import java.util.ArrayList;


public class Data{
    private List<Note> notes;
    private List<VocabTerms> vocabs;
    private List<Quiz> quizzes;
    private List<Topic> topics;
    private List<Report> reports;
    private List<StudyGuide> studyGuides;
}
