import java.util.ArrayList;

public class QuizQuestion{
    private long questionId;
    private Quiz quiz;
    private String questionText;
    private String[] options;
    private int selectedAnswer;
    private int correctAnswer;
    private Studyable topic;
}