public enum SessionStatus{Ongoing, Paused, Completed;}