import java.util.ZonedDateTime;

public class StudyGuide{
    private long studyGuideId;
    private long userId;
    private long sourceReportId;
    private ZonedDateTime dateCreated;
    private String content;
}