public interface Studyable{

}