public class Topic implements Topic{
    private String topicId;
    private String name;
    private int importanceScore;
    private long relatedNote;
}