public class VocabTerm implements Studyable{
    private int vocabId;
    private String term;
    private String definition;
    private long srcNoteId;
    private long relatedTopicId;
}